--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     Select a text file:
     <input type="file" id="fileInput">
     <div id="fileDisplayArea"></div>
-    <script src="parse.js"></script>
+    <script type = "text/javascript" src="https://rawgit.com/acgeist/currenciesParser/master/parse.js"></script>
+    
     </body>
 
 </html>
     <!-- <script src="https://rawgit.com/acgeist/currenciesParser/master/parse.js"></script> -->
 
-
+    <!-- <script type = "text/javascript" src="parse.js"></script> -->
     <!-- **********************Bootstrap 4 JavaScript plugins************** -->
     <!--
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
