--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 body {
   margin-left: 10%;
   margin-right: 10%;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
     </style>
@@ -23,14 +23,15 @@ body {
 <body>
   <div class="container">
     <div class="page-header" id="mainHeader">
-      <h1>74FS Currencies Checker</h1></div>
-    <div class="jumbotron" id="fileInputJumbotron"> 
-      <input type="file" id="fileInput" accept="application/xml"></input>
+      <h1><img alt="74FS Patch" width="287" height="333" style="width: 103px; height: 114px;" src="https://badbirdbook.com/photos/units/74FS.jpg">
+      74FS Currencies Checker</h1></div>
+    <div class="jumbotron" id="fileInputJumbotron"> <input type="file" id="fileInput" accept="application/xml"></input>
     </div>
     <div id="fileData" hidden></div>
-    <div id="topRowBtns"></div>
+    <div id="topRowBtns" class="btn-group-justified"></div>
     <div id="fileDisplayArea"></div>
   </div>
+  <!--************************SCRIPTS*********************-->
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="parse.js"></script>
