Pre-collapse tables

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ TODO:
 -install eslint
 -Clean up formatting/layout so it's less crowded at the top of the page
 -Make each pilot's table collapse?
+-DOT sort by date? http://stackoverflow.com/questions/10123953/sort-javascript-object-array-by-date
+
 -->
 <!doctype html>
 <html lang="en-US">
