Major Changes, too many to list.

--- a/generic.html
+++ b/generic.html
@@ -14,16 +14,7 @@ TODO:
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
-    <style>
-      body {
-        margin-left: 10%;
-        margin-right: 10%;
-        margin-top: 2%;
-      }
-      ::-ms-tooltip { 
-        display: none; 
-      }
-    </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -33,7 +24,7 @@ TODO:
     </div>
   </div>
   <div class="jumbotron" id="fileInputJumbotron"> <input type="file" id="fileInput" accept="application/xml">
-    <p>Pull an ITS in .pdf summary from ARMS.  Open the .pdf and "save as" XML.  This "ITS.XML" file is what you should be uploading here.</p>
+    <p>Ask your unit's SARM/1C0s to pull an ITS for all the unit's pilots in .pdf format from ARMS.  Open the .pdf and "save as" XML.  This "ITS.XML" file is what you should be uploading here.</p>
   </div>
   <div id="fileData" hidden></div>  
   <div id="sliderDiv"></div> 
